docs/api/qiskit/0.43/qiskit.algorithms.optimizers.ADAM.md
---
title: ADAM
description: API reference for qiskit.algorithms.optimizers.ADAM
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.optimizers.ADAM
---

# ADAM

<span id="qiskit.algorithms.optimizers.ADAM" />

`ADAM(maxiter=10000, tol=1e-06, lr=0.001, beta_1=0.9, beta_2=0.99, noise_factor=1e-08, eps=1e-10, amsgrad=False, snapshot_dir=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/optimizers/adam_amsgrad.py "view source code")

Bases: [`Optimizer`](qiskit.algorithms.optimizers.Optimizer "qiskit.algorithms.optimizers.optimizer.Optimizer")

Adam and AMSGRAD optimizers.

Adam \[1] is a gradient-based optimization algorithm that is relies on adaptive estimates of lower-order moments. The algorithm requires little memory and is invariant to diagonal rescaling of the gradients. Furthermore, it is able to cope with non-stationary objective functions and noisy and/or sparse gradients.

AMSGRAD \[2] (a variant of Adam) uses a ‘long-term memory’ of past gradients and, thereby, improves convergence properties.

**References**

**\[1]: Kingma, Diederik & Ba, Jimmy (2014), Adam: A Method for Stochastic Optimization.**

[arXiv:1412.6980](https://arxiv.org/abs/1412.6980)

**\[2]: Sashank J. Reddi and Satyen Kale and Sanjiv Kumar (2018),**

On the Convergence of Adam and Beyond. [arXiv:1904.09237](https://arxiv.org/abs/1904.09237)

<Admonition title="Note" type="note">
  This component has some function that is normally random. If you want to reproduce behavior then you should set the random number generator seed in the algorithm\_globals (`qiskit.utils.algorithm_globals.random_seed = seed`).
</Admonition>

**Parameters**

*   **maxiter** (*int*) – Maximum number of iterations
*   **tol** (*float*) – Tolerance for termination
*   **lr** (*float*) – Value >= 0, Learning rate.
*   **beta\_1** (*float*) – Value in range 0 to 1, Generally close to 1.
*   **beta\_2** (*float*) – Value in range 0 to 1, Generally close to 1.
*   **noise\_factor** (*float*) – Value >= 0, Noise factor
*   **eps** (*float*) – Value >=0, Epsilon to be used for finite differences if no analytic gradient method is given.
*   **amsgrad** (*bool*) – True to use AMSGRAD, False if not
*   **snapshot\_dir** (*str | None*) – If not None save the optimizer’s parameter after every step to the given directory

## Methods

<span id="qiskit-algorithms-optimizers-adam-get-support-level" />

### get\_support\_level

<span id="qiskit.algorithms.optimizers.ADAM.get_support_level" />

`ADAM.get_support_level()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/optimizers/adam_amsgrad.py "view source code")

Return support level dictionary

<span id="qiskit-algorithms-optimizers-adam-gradient-num-diff" />

### gradient\_num\_diff

<span id="qiskit.algorithms.optimizers.ADAM.gradient_num_diff" />

`static ADAM.gradient_num_diff(x_center, f, epsilon, max_evals_grouped=None)`

We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

**Parameters**

*   **x\_center** (*ndarray*) – point around which we compute the gradient
*   **f** (*func*) – the function of which the gradient is to be computed.
*   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
*   **max\_evals\_grouped** (*int*) – max evals grouped, defaults to 1 (i.e. no batching).

**Returns**

the gradient computed

**Return type**

grad

<span id="qiskit-algorithms-optimizers-adam-load-params" />

### load\_params

<span id="qiskit.algorithms.optimizers.ADAM.load_params" />

`ADAM.load_params(load_dir)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/optimizers/adam_amsgrad.py "view source code")

Load iteration parameters for a file called `adam_params.csv`.

**Parameters**

**load\_dir** (*str*) – The directory containing `adam_params.csv`.

<span id="qiskit-algorithms-optimizers-adam-minimize" />

### minimize

<span id="qiskit.algorithms.optimizers.ADAM.minimize" />

`ADAM.minimize(fun, x0, jac=None, bounds=None, objective_function=None, initial_point=None, gradient_function=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/optimizers/adam_amsgrad.py "view source code")

Minimize the scalar function.

<Admonition title="Deprecated since version 0.19.0" type="danger">
  `qiskit.algorithms.optimizers.adam_amsgrad.ADAM.minimize()`’s argument `gradient_function` is deprecated as of qiskit-terra 0.19.0. It will be removed no earlier than 3 months after the release date. Instead, use the argument `jac`, which behaves identically.
</Admonition>

<Admonition title="Deprecated since version 0.19.0" type="danger">
  `qiskit.algorithms.optimizers.adam_amsgrad.ADAM.minimize()`’s argument `initial_point` is deprecated as of qiskit-terra 0.19.0. It will be removed no earlier than 3 months after the release date. Instead, use the argument `fun`, which behaves identically.
</Admonition>

<Admonition title="Deprecated since version 0.19.0" type="danger">
  `qiskit.algorithms.optimizers.adam_amsgrad.ADAM.minimize()`’s argument `objective_function` is deprecated as of qiskit-terra 0.19.0. It will be removed no earlier than 3 months after the release date. Instead, use the argument `fun`, which behaves identically.
</Admonition>

**Parameters**

*   **fun** (*Callable\[\[POINT], float]*) – The scalar function to minimize.
*   **x0** (*POINT*) – The initial point for the minimization.
*   **jac** (*Callable\[\[POINT], POINT] | None*) – The gradient of the scalar function `fun`.
*   **bounds** (*list\[tuple\[float, float]] | None*) – Bounds for the variables of `fun`. This argument might be ignored if the optimizer does not support bounds.
*   **objective\_function** (*Callable\[\[np.ndarray], float] | None*) – DEPRECATED. A function handle to the objective function.
*   **initial\_point** (*np.ndarray | None*) – DEPRECATED. The initial iteration point.
*   **gradient\_function** (*Callable\[\[np.ndarray], float] | None*) – DEPRECATED. A function handle to the gradient of the objective function.

**Returns**

The result of the optimization, containing e.g. the result as attribute `x`.

**Return type**

[OptimizerResult](qiskit.algorithms.optimizers.OptimizerResult "qiskit.algorithms.optimizers.OptimizerResult")

<span id="qiskit-algorithms-optimizers-adam-print-options" />

### print\_options

<span id="qiskit.algorithms.optimizers.ADAM.print_options" />

`ADAM.print_options()`

Print algorithm-specific options.

<span id="qiskit-algorithms-optimizers-adam-save-params" />

### save\_params

<span id="qiskit.algorithms.optimizers.ADAM.save_params" />

`ADAM.save_params(snapshot_dir)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/optimizers/adam_amsgrad.py "view source code")

Save the current iteration parameters to a file called `adam_params.csv`.

<Admonition title="Note" type="note">
  The current parameters are appended to the file, if it exists already. The file is not overwritten.
</Admonition>

**Parameters**

**snapshot\_dir** (*str*) – The directory to store the file in.

<span id="qiskit-algorithms-optimizers-adam-set-max-evals-grouped" />

### set\_max\_evals\_grouped

<span id="qiskit.algorithms.optimizers.ADAM.set_max_evals_grouped" />

`ADAM.set_max_evals_grouped(limit)`

Set max evals grouped

<span id="qiskit-algorithms-optimizers-adam-set-options" />

### set\_options

<span id="qiskit.algorithms.optimizers.ADAM.set_options" />

`ADAM.set_options(**kwargs)`

Sets or updates values in the options dictionary.

The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

**Parameters**

**kwargs** (*dict*) – options, given as name=value.

<span id="qiskit-algorithms-optimizers-adam-wrap-function" />

### wrap\_function

<span id="qiskit.algorithms.optimizers.ADAM.wrap_function" />

`static ADAM.wrap_function(function, args)`

Wrap the function to implicitly inject the args at the call of the function.

**Parameters**

*   **function** (*func*) – the target function
*   **args** (*tuple*) – the args to be injected

**Returns**

wrapper

**Return type**

function\_wrapper

## Attributes

<span id="qiskit.algorithms.optimizers.ADAM.bounds_support_level" />

### bounds\_support\_level

Returns bounds support level

<span id="qiskit.algorithms.optimizers.ADAM.gradient_support_level" />

### gradient\_support\_level

Returns gradient support level

<span id="qiskit.algorithms.optimizers.ADAM.initial_point_support_level" />

### initial\_point\_support\_level

Returns initial point support level

<span id="qiskit.algorithms.optimizers.ADAM.is_bounds_ignored" />

### is\_bounds\_ignored

Returns is bounds ignored

<span id="qiskit.algorithms.optimizers.ADAM.is_bounds_required" />

### is\_bounds\_required

Returns is bounds required

<span id="qiskit.algorithms.optimizers.ADAM.is_bounds_supported" />

### is\_bounds\_supported

Returns is bounds supported

<span id="qiskit.algorithms.optimizers.ADAM.is_gradient_ignored" />

### is\_gradient\_ignored

Returns is gradient ignored

<span id="qiskit.algorithms.optimizers.ADAM.is_gradient_required" />

### is\_gradient\_required

Returns is gradient required

<span id="qiskit.algorithms.optimizers.ADAM.is_gradient_supported" />

### is\_gradient\_supported

Returns is gradient supported

<span id="qiskit.algorithms.optimizers.ADAM.is_initial_point_ignored" />

### is\_initial\_point\_ignored

Returns is initial point ignored

<span id="qiskit.algorithms.optimizers.ADAM.is_initial_point_required" />

### is\_initial\_point\_required

Returns is initial point required

<span id="qiskit.algorithms.optimizers.ADAM.is_initial_point_supported" />

### is\_initial\_point\_supported

Returns is initial point supported

<span id="qiskit.algorithms.optimizers.ADAM.setting" />

### setting

Return setting

<span id="qiskit.algorithms.optimizers.ADAM.settings" />

### settings

